--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: Blogging 101
+author: ya boi
+email: ya_boi@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-
+  Learn how to blog properly with ya boi
+theme: minima
 # social links
-twitter_username: your-twitter-handle
-github_username:  your-github-handle
+twitter_username: @ya_boi
+github_username:  @ya_boi
 
 show_excerpts: true # set to false to remove excerpts on the homepage
